# plover_word_tray

./: .gitignore  MANIFEST.in  README.md  setup.cfg
plover_word_tray/: config_ui.py  pseudo.py  sorting.py  word_tray_config.py  word_tray_macros.py  word_tray_suggestions.py  word_tray_ui.py
plover_word_tray/resources/: resources.qrc
