[metadata]
name = plover-word-tray
version = 0.0.10
description = Autolookup GUI Plugin for Plover
long_description = file: README.md
long_description_content_type = text/markdown
author = Kaoffie
author_email = kaoffie@gmail.com
url = https://github.com/Kaoffie/plover_word_tray
license = MIT License (MIT)
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
    plover >= 4.0.0.dev8
packages = 
    plover_word_tray

[options.entry_points]
plover.gui.qt.tool =
  word_tray = plover_word_tray.word_tray_suggestions:WordTraySuggestions
plover.macro =
  wt_prev_page = plover_word_tray.word_tray_macros:prev_page
  wt_next_page = plover_word_tray.word_tray_macros:next_page
  wt_reload = plover_word_tray.word_tray_macros:word_tray_reload
